[tool.poetry]
name = "photometry"
version = "0.1.1"
description = "Photometry package"
authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
astropy = "^6.1.1"
photutils = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
